--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
-
+<artifacts>
+<invoke name="artifacts">
+<parameter name="command">rewrite</parameter>
+<parameter name="type">text/html</parameter>
+<parameter name="title">CVW Dashboard - Mobile Fixed Version</parameter>
+<parameter name="id">cvw_dashboard_mobile_fixed_final</parameter>
+<parameter name="content"><!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -2596,4 +2603,3 @@ const lines = csvData.trim().split('\n');
 </html></parameter>
 </invoke>
 </artifacts>
-
