--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<artifacts>
+<invoke name="artifacts">
+<parameter name="command">rewrite</parameter>
+<parameter name="type">text/html</parameter>
+<parameter name="title">CVW Dashboard - Mobile Fixed Version</parameter>
+<parameter name="id">cvw_dashboard_mobile_fixed_final</parameter>
+<parameter name="content"><!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1727,8 +1735,7 @@ body {
                 const value = parseFloat(this.value);
                 
                 if (unit === 'months' && value > 60) {
-                    this.setCustomValidity('Maximum 60
-months (5 years). Use "Years" for older children.');
+                    this.setCustomValidity('Maximum 60months(5 years). Use "Years" for older children.');
 } else if (unit === 'years' && value > 18) {
 this.setCustomValidity('Maximum 18 years for CVW cases.');
 } else if (value < 0) {
@@ -2595,4 +2602,3 @@ const lines = csvData.trim().split('\n');
 </html></parameter>
 </invoke>
 </artifacts>
-
