--- a/public/index.html
+++ b/public/index.html
@@ -666,6 +666,9 @@
         </div>
     </div>
 
+    <!-- Notification Container -->
+    <div id="notification" class="notification"></div>
+
     <!-- Main Dashboard -->
     <div id="mainDashboard" class="hidden">
         <!-- User Info Bar -->
