--- a/public/index.html
+++ b/public/index.html
@@ -878,11 +878,26 @@
                 name: 'Data Viewer',
                 avatar: 'V'
             },
-            'reporter': { 
-                password: 'report123', 
+            'npa_reporter': { 
+                password: 'NPA2024', 
                 role: 'reporter', 
-                name: 'Case Reporter',
-                avatar: 'R'
+                name: 'NPA Case Reporter',
+                avatar: 'N',
+                agency: 'NPA'
+            },
+            'moh_reporter': { 
+                password: 'MOH2024', 
+                role: 'reporter', 
+                name: 'MOH Case Reporter',
+                avatar: 'M',
+                agency: 'MOH'
+            },
+            'zp_reporter': { 
+                password: 'ZP2024', 
+                role: 'reporter', 
+                name: 'Police Case Reporter',
+                avatar: 'P',
+                agency: 'ZP'
             }
         };
 
